Bug 136301 - Two parallel physics animations with different durations, cause a jump in the animation
Summary: Two parallel physics animations with different durations, cause a jump in the...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-30 17:39 UTC by Sarper Akdemir (allotropia)
Modified: 2026-01-02 13:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test case which demonstartes the bug (11.00 KB, application/vnd.oasis.opendocument.presentation)
2020-08-30 17:39 UTC, Sarper Akdemir (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sarper Akdemir (allotropia) 2020-08-30 17:39:26 UTC
Description:
When there is two or more parallel physics animation effects going on, and they have different durations. When one of the animaton effect ends there is a jump in the other animation effects.

Steps to Reproduce:
1.Add two shapes with Fall Simulated
2.Set first one a duration of 3 and the second one a duration of 5
3.Make second one start with previous
4.Play the slide

Actual Results:
When the first animation effect ends, there's a sudden jump in the animation

Expected Results:
When the first animation effect ends, there shouldn't be jump and the animation should just keep going.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: 977a97f3148c0aece0a54304aae81ec44ced07e0
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Sarper Akdemir (allotropia) 2020-08-30 17:39:58 UTC
Created attachment 164886 [details]
Test case which demonstartes the bug
Comment 2 Commit Notification 2020-08-31 10:32:22 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/943aaf6c61d9594ec229984b5d5801afe5d89024

tdf#136301: fix parallel physics animations over-stepping during lock transfer

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.